syntax = "proto3";

package com.globaldashboard.auth.proto;

option java_multiple_files = true;
option java_package = "com.globaldashboard.auth.proto";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Verify (VerifyRequest) returns (VerifyResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  int32 expires_in = 2;
}

message VerifyRequest {
  string token = 1;
}

message VerifyResponse {
  bool valid = 1;
  string user_id = 2;
  string username = 3;
  repeated string roles = 4;
}
